--- a/index.html
+++ b/index.html
@@ -620,8 +620,7 @@ rgba(0, 82, 148, .75)
                 <dd>
                     <p>
                         Gets or sets a control's color value. To use this method as a setter, pass
-                        <code>data</code> in as a hex value. (You can also obtain this value by checking the
-                        input element's <code>value</code> attribute.)
+                        in a color string or an object (ex: <code>{color: '#fc0', opacity: .5}</code>).
                     </p>
                 </dd>
             </dl>
