Removed verson number from demo

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             <!-- Intro -->
             <div id="intro" class="jumbotron">
-                <h1>jQuery MiniColors 2.1</h1>
+                <h1>jQuery MiniColors</h1>
                 <p class="text-muted">
                     Now with Bootstrap 3 support!
                 </p>
