--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
                             <br>
                             <input type="text" id="rgb" class="form-control demo" data-format="rgb" value="rgb(33, 147, 58)">
                             <span class="help-block">
-                                RGB input can be assigned by including the <code>data-format</code> attribute
-                                or by setting the <code>format</code> option to <code>rgb</code>.
+                                RGB input can be assigned by setting the <code>format</code> option
+                                to <code>rgb</code>.
                             </span>
                         </div>
                     </div>
@@ -254,8 +254,9 @@
                             <br>
                             <input type="text" id="rgba" class="form-control demo" data-format="rgb" data-opacity=".5" value="rgba(52, 64, 158, 0.5)">
                             <span class="help-block">
-                                RGB(A) input can be assigned by including the <code>data-format</code> and <code>data-opacity</code> attributes
-                                or by setting the <code>format</code> option to <code>rgb</code> and <code>opacity</code> option to <code>true</code>.
+                                RGB(A) input can be assigned by setting the <code>format</code>
+                                option to <code>rgb</code> and <code>opacity</code> option to
+                                <code>true</code>.
                             </span>
                         </div>
                     </div>
@@ -272,8 +273,9 @@
                             <br>
                             <input type="text" id="opacity" class="form-control demo" data-opacity=".5" value="#766fa8">
                             <span class="help-block">
-                                Opacity can be assigned by including the <code>data-opacity</code> attribute
-                                or by setting the <code>opacity</code> option to <code>true</code>.
+                                Opacity can be assigned by including the <code>data-opacity</code>
+                                attribute or by setting the <code>opacity</code> option to
+                                <code>true</code>.
                             </span>
                         </div>
                     </div>
@@ -283,8 +285,9 @@
                             <br>
                             <input type="text" id="keywords" class="form-control demo" data-keywords="transparent, initial, inherit" value="transparent">
                             <span class="help-block">
-                                CSS-wide keywords can be assigned by including the <code>data-keywords</code> attribute
-                                or by setting the <code>keywords</code> option to a comma-separated list of valid keywords: <code>transparent, initial, inherit</code>.<br />
+                                CSS-wide keywords can be assigned by setting the <code>keywords</code>
+                                option to a comma-separated list of valid keywords: <code>transparent,
+                                initial, inherit</code>.
                             </span>
                         </div>
                     </div>
