Fixed opacity with swatches rendering

--- a/without-bootstrap.html
+++ b/without-bootstrap.html
@@ -173,7 +173,12 @@
     <div class="form-group">
         <label for="letter-case">Swatches</label>
         <br>
-        <input type="text" id="letter-case" class="demo" data-format="rgb" data-opacity="1" data-swatches="#fff|#000|#f00|#0f0|#00f|#ff0|rgba(0,0,255,0.5)">
+        <input type="text" id="swatches" class="demo" data-swatches="#fff|#000|#f00|#0f0|#00f|#ff0|#0ff" value="#f00">
+    </div>
+    <div class="form-group">
+        <label for="letter-case">Swatches and opacity</label>
+        <br>
+        <input type="text" id="swatches-opacity" class="demo" data-format="rgb" data-opacity="1" data-swatches="#fff|#000|#f00|#0f0|#00f|#ff0|rgba(0,0,255,0.5)" value="#f00">
     </div>
 
 </body>
