Fixed default value for RGBA demo

--- a/index.html
+++ b/index.html
@@ -251,11 +251,11 @@
                     </div>
                     <div class="col-lg-4 col-sm-4 col-12">
                         <div class="form-group">
-                            <label for="rgba">RGB(A)</label>
+                            <label for="rgba">RGBA</label>
                             <br>
                             <input type="text" id="rgba" class="form-control demo" data-format="rgb" data-opacity=".5" value="rgba(52, 64, 158, 0.5)">
                             <span class="help-block">
-                                RGB(A) input can be assigned by setting the <code>format</code>
+                                RGBA input can be assigned by setting the <code>format</code>
                                 option to <code>rgb</code> and <code>opacity</code> option to
                                 <code>true</code>.
                             </span>
@@ -361,7 +361,7 @@
                         <div class="form-group">
                             <label for="letter-case">Swatches and opacity</label>
                             <br>
-                            <input type="text" id="swatches" class="form-control demo" data-format="rgb" data-opacity="1" data-swatches="#fff|#000|#f00|#0f0|#00f|#ff0|rgba(0,0,255,0.5)"  value="#abcdef">
+                            <input type="text" id="swatches" class="form-control demo" data-format="rgb" data-opacity="1" data-swatches="#fff|#000|#f00|#0f0|#00f|#ff0|rgba(0,0,255,0.5)"  value="rgba(14, 206, 235, .5)">
                             <span class="help-block">
                                 Example with swatches and opacity.
                             </span>
@@ -576,7 +576,7 @@ $.minicolors.defaults = $.extend($.minicolors.defaults, {
 </pre>
                     </div>
                 </dd>
-                
+
                 <dt>swatches</dt>
                 <dd>
                     <p>
