remove swatch limit

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                         <div class="form-group">
                             <label for="letter-case">Swatches</label>
                             <br>
-                            <input type="text" id="swatches" class="form-control demo" data-swatches="#fff|#000|#f00|#0f0|#00f|#ff0|#0ff" value="#abcdef">
+                            <input type="text" id="swatches" class="form-control demo" data-swatches="#ef9a9a|#90caf9|#a5d6a7|#fff59d|#ffcc80|#bcaaa4|#eeeeee|#f44336|#2196f3|#4caf50|#ffeb3b|#ff9800|#795548|#9e9e9e" value="#abcdef">
                             <span class="help-block">
                                 Example with swatches.
                             </span>
@@ -581,7 +581,7 @@ $.minicolors.defaults = $.extend($.minicolors.defaults, {
                 <dd>
                     <p>
                         An array containing some colors, in either rgb(a) or hex format, that will
-                        show up under the main color grid. There can be only up to 7 colors.
+                        show up under the main color grid.
                     </p>
                 </dd>
             </dl>
