--- a/without-bootstrap.html
+++ b/without-bootstrap.html
@@ -173,7 +173,7 @@
     <div class="form-group">
         <label for="letter-case">Swatches</label>
         <br>
-        <input type="text" id="swatches" class="demo" data-swatches="#fff|#000|#f00|#0f0|#00f|#ff0|#0ff" value="#f00">
+        <input type="text" id="swatches" class="demo" data-swatches="#ef9a9a|#90caf9|#a5d6a7|#fff59d|#ffcc80|#bcaaa4|#eeeeee|#f44336|#2196f3|#4caf50|#ffeb3b|#ff9800|#795548|#9e9e9e" value="#f00">
     </div>
     <div class="form-group">
         <label for="letter-case">Swatches and opacity</label>
