make example page more correct

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </div>
   <div>
     {palette: "limited", allowAlpha: true, returnName: true, <br>
-    allowedCols: ["transparent", "red'", "green", "blue", "yellow"]}
+    allowedCols: ["transparent", "red", "green", "blue", "yellow"]}
     <br> Value: <span></span>
     <input type="text" id="col7" class="form-control my-cp" value="#ff0000">
   </div>
@@ -107,7 +107,7 @@
       palette: "limited",
       allowAlpha: true,
       returnName: true,
-      allowedCols: "transparent red green blue yellow"
+      allowedCols: ["transparent", "red", "green", "blue", "yellow"]
     });
     $('#col8').colourpicker({
       palette: "limited",
