fix #213, document show and hide methods

--- a/index.html
+++ b/index.html
@@ -601,6 +601,20 @@ $.minicolors.defaults = $.extend($.minicolors.defaults, {
           </p>
         </dd>
 
+        <dt>hide</dt>
+        <dd>
+          <p>
+            Hide the color picker box
+          </p>
+        </dd>
+
+        <dt>show</dt>
+        <dd>
+          <p>
+            Show the color picker box
+          </p>
+        </dd>
+
         <dt>opacity</dt>
         <dd>
           <p>
