--- a/without-bootstrap.html
+++ b/without-bootstrap.html
@@ -78,7 +78,9 @@
   <p>
     <a href="index.html">&laquo; Back to the Bootstrap demo</a>
   </p>
-
+  <p>
+    <a onclick="$(body).attr('dir')=='rtl'?$(body).removeAttr('dir'):$(body).attr('dir', 'rtl')">Toggle LTR/RTL</a>
+  </p>
   <!-- Control Types -->
   <h3>Control Types</h3>
   <div class="form-group">
