Remove default horizontal data-position from JS

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           inline: $(this).attr('data-inline') === 'true',
           letterCase: $(this).attr('data-letterCase') || 'lowercase',
           opacity: $(this).attr('data-opacity'),
-          position: $(this).attr('data-position') || 'bottom left',
+          position: $(this).attr('data-position') || 'bottom',
           swatches: $(this).attr('data-swatches') ? $(this).attr('data-swatches').split('|') : [],
           change: function(value, opacity) {
             if( !value ) return;
