--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
 
   <!-- jQuery -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
   <!-- Bootstrap 3 -->
-  <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+  <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
   <!-- MiniColors -->
   <script src="jquery.minicolors.js"></script>
@@ -111,8 +111,8 @@
           Now with Bootstrap 3 support!
         </p>
         <p>
-          A project by <a href="http://www.abeautifulsite.net/">A Beautiful Site</a>,
-          originally developed for <a href="http://www.surrealcms.com/">Surreal CMS</a>.
+          A project by <a href="https://www.abeautifulsite.net/">A Beautiful Site</a>,
+          originally developed for <a href="https://www.surrealcms.com/">Surreal CMS</a>.
         </p>
       </div>
 
@@ -145,7 +145,7 @@
       <!-- Demos -->
       <h2 id="demos">Demos</h2>
       <p>
-        This is the main demo page, which uses <a href="http://getbootstrap.com/">Bootstrap 3</a>,
+        This is the main demo page, which uses <a href="https://getbootstrap.com/">Bootstrap 3</a>,
         but this plugin works without Bootstrap as well.
       </p>
       <p>
@@ -732,11 +732,11 @@ $(<em>selector</em>).minicolors({
 
       <h2 id="license">License</h2>
       <p>
-        Licensed under the <a href="http://opensource.org/licenses/MIT">MIT license</a>,
+        Licensed under the <a href="https://opensource.org/licenses/MIT">MIT license</a>,
         same as <a href="https://jquery.org/license/">jQuery</a>.
       </p>
       <p>
-        &copy;2013 <a href="http://www.abeautifulsite.net/">A Beautiful Site, LLC.</a>
+        &copy;2013 <a href="https://www.abeautifulsite.net/">A Beautiful Site, LLC.</a>
       </p>
     </div>
   </div>
