--- a/index.html
+++ b/index.html
@@ -618,14 +618,14 @@ $.minicolors.defaults = $.extend($.minicolors.defaults, {
         <dt>hide</dt>
         <dd>
           <p>
-            Hide the color picker box
+            Hides the color picker.
           </p>
         </dd>
 
         <dt>show</dt>
         <dd>
           <p>
-            Show the color picker box
+            Shows the color picker.
           </p>
         </dd>
 
